--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
       # - run:
       #     name: Run frontend tests
       #     command: npm test --ci --runInBand --reporters=default --reporters=jest-junit
-      # - run:
-      #     name: Run frontend linter
-      #     command: npm run lint
+      - run:
+          name: Run frontend linter
+          command: npm run lint
       - store_test_results:
           path: ./test-results/
 workflows:
