--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
           pkg-manager: npm
       - run:
           command: npm install jest-junit
-      # - run:
-      #     name: Run frontend tests
-      #     command: npm test --ci --runInBand --reporters=default --reporters=jest-junit
+      - run:
+          name: Run frontend tests
+          command: npm test --ci --runInBand --reporters=default --reporters=jest-junit
       - run:
           name: Run frontend linter
           command: npm run lint
